fixed some css style bugs in firefox 3: 	-buttons appear twice with enabled and disabled versions (bug #401) 	-editor has wrong background color(bug #405)
did not commit any changes to the install.template.rdf file needed to run chickenfoot in firefox 3 beta:
	-increase max version number to 3.0
	-comment out <em:updateURL> line

git-svn-id: https://svn.csail.mit.edu/chickenfoot/trunk/chickenfoot@1369 21796ef0-4f62-4552-8d1b-68394bc7e1f1

--- a/skin/classic/sidebar.css
+++ b/skin/classic/sidebar.css
@@ -6,8 +6,19 @@
   -moz-image-region: rect(0 48px 24px 24px) !important;
 }
 
+
+tabpanels {
+  background-color: white;
+  border: 1px solid #C0C0C0;
+  -moz-border-colors: rgb(113,111,100);
+}
+
+vbox { border: 1px solid #C0C0C0; }
+
+toolbar { outline: 1px solid #C0C0C0; }
+
 #CF_TRIGGERS_PANE[ignoreAllTriggers="true"] {
-   color: rgb(150,150,150);
+  color: rgb(150,150,150);
 }
 
 #CF_TRIGGERS_PANE[ignoreAllTriggers="false"] {
